--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -28,7 +29,12 @@
 
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>Separation of concerns is a widely used term in web development and refers to serparting code into different files based on use.  It is one of the key design principles that we practice in Boot Camp.  Separation of concerns is based on the idea that each section of code should have its own responsibility </li>
+          <li>The order of CSS from inner to outer is as follows: Content, padding, border, margin</li>
+          <li>Do not repeats yourself (DRY) is a coding principle that encourages developers to reuse or share pieces of code in order to reduce the number of lines of code that need to be written or maintained.  DRY can greatly reduce their overall size and complexity of a code base </li>
+          <li>Debugging is one of the most important parts of the development process.  Every day, developers notice errors and review code that isn’t working.  It’s important to get into the mindset that errors and mistakes are gifts.  They tell us when something is wrong, and if we can stay curious, we can figure out what is happening and learn something new.</li>
         </ul>
    
       </section>
