--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
 
     <footer>
       <p>I can code!</p>
-    </footer>
+    </footer><script src="./assets/script.js"></script>
   </body>
 </html>
