--- a/index.html
+++ b/index.html
@@ -58,7 +58,27 @@
 
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+
+          <li>Contol flow is the order in which a computer executes code in a script</li>
+
+          <li>JAvaScript is a powerful programmin language that can add interactivity to a website</li>
+
+          <li>Some different types of JAvaScript are:Null, Undefined, Booleon, Number, BigInt, String, and Symbol.</li>
+
+          <li>Null is inhabited by exactly one value: null</li>
+
+          <li>Undefined is inhabited by exactly one value: undefined.</li>
+          
+          <li>Boolean represents logical entity and is inhabited by true and false</li>
+
+          <li>Number is a double prediction 64-bit binary format IEEE 754 value</li>
+
+          <li>BigInt is a numberic primitive that can represent intergers with arbitrary magnitude.  With BigInts you can safetly store and operate on large interger even beyond the interger limit for Numbers</li>
+
+          <li>String represents textual data and is encoded as a sequence of 16-bit unsigned interference values representing UTF-16 code units</li>
+
+          <li>Symbol is a unique and immutable primitive value and may be used as the key of an object property</li>
         </ul>
    
       </section>
