--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 
           <li>Contol flow is the order in which a computer executes code in a script</li>
 
-          <li>JAvaScript is a powerful programmin language that can add interactivity to a website</li>
+          <li>JavaScript is a powerful programming language that can add interactivity to a website</li>
 
-          <li>Some different types of JAvaScript are:Null, Undefined, Booleon, Number, BigInt, String, and Symbol.</li>
+          <li>Some different types of JavaScript are:Null, Undefined, Booleon, Number, BigInt, String, and Symbol.</li>
 
           <li>Null is inhabited by exactly one value: null</li>
 
