--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         <ul>
           <li>The head element contains information about the webpage.</li>
 
-          <li>The body element represents the visible content shown to hte user.</li>
+          <li>The body element represents the visible content shown to the user.</li>
 
           <li>While the head elements is a container for metadata.  Meta elements contain information about the page that is used by the browser.  The user won't see information in the head or meta elements.</li>
 
         </ul>
+      </section>
    
       <section class="card" id="css-section">
 
@@ -62,9 +63,9 @@
 
           <li>Contol flow is the order in which a computer executes code in a script</li>
 
-          <li>JavaScript is a powerful programming language that can add interactivity to a website</li>
+          <li>JAvaScript is a powerful programmin language that can add interactivity to a website</li>
 
-          <li>Some different types of JavaScript are:Null, Undefined, Booleon, Number, BigInt, String, and Symbol.</li>
+          <li>Some different types of JAvaScript are:Null, Undefined, Booleon, Number, BigInt, String, and Symbol.</li>
 
           <li>Null is inhabited by exactly one value: null</li>
 
