--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -22,7 +23,7 @@
           <li>The body element represents the visible content shown to hte user.</li>
 
           <li>While the head elements are a container for metadata.  Meta elements contain information about the page that is used by the browser.  The user won't see information in the head or meta elements.</li>
-
+        </section>
         </ul>
    
       <section class="card" id="css-section">
